// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flex renders alignContent, alignItems, and alignSelf end 1`] = `
Object {
  "alignContent": "flex-end",
  "alignItems": "flex-end",
  "alignSelf": "flex-end",
  "display": "flex",
  "justifyContent": "space-between",
}
`;

exports[`flex renders column 1`] = `
Object {
  "alignContent": "flex-start",
  "alignItems": "stretch",
  "alignSelf": "auto",
  "display": "flex",
  "flexDirection": "column",
  "justifyContent": "space-between",
}
`;

exports[`flex renders column reverse 1`] = `
Object {
  "alignContent": "flex-start",
  "alignItems": "stretch",
  "alignSelf": "auto",
  "display": "flex",
  "flexDirection": "column-reverse",
  "justifyContent": "space-between",
}
`;

exports[`flex renders default flex styles 1`] = `
Object {
  "alignContent": "flex-start",
  "alignItems": "stretch",
  "alignSelf": "auto",
  "display": "flex",
  "justifyContent": "space-between",
}
`;

exports[`flex renders first 1`] = `
Object {
  "alignContent": "flex-start",
  "alignItems": "stretch",
  "alignSelf": "auto",
  "display": "flex",
  "justifyContent": "space-between",
  "order": -1,
}
`;

exports[`flex renders first 2`] = `
Object {
  "alignContent": "flex-start",
  "alignItems": "stretch",
  "alignSelf": "auto",
  "display": "flex",
  "justifyContent": "space-between",
  "order": -1,
}
`;

exports[`flex renders inline 1`] = `
Object {
  "alignContent": "flex-start",
  "alignItems": "stretch",
  "alignSelf": "auto",
  "display": "inline-flex",
  "justifyContent": "space-between",
}
`;

exports[`flex renders justifyContent around 1`] = `
Object {
  "alignContent": "flex-start",
  "alignItems": "stretch",
  "alignSelf": "auto",
  "display": "flex",
  "justifyContent": "space-around",
}
`;

exports[`flex renders last 1`] = `
Object {
  "alignContent": "flex-start",
  "alignItems": "stretch",
  "alignSelf": "auto",
  "display": "flex",
  "justifyContent": "space-between",
  "order": 1,
}
`;

exports[`flex renders reverse 1`] = `
Object {
  "alignContent": "flex-start",
  "alignItems": "stretch",
  "alignSelf": "auto",
  "display": "flex",
  "flexDirection": "row-reverse",
  "justifyContent": "space-between",
}
`;

exports[`flex renders wrap 1`] = `
Object {
  "alignContent": "flex-start",
  "alignItems": "stretch",
  "alignSelf": "auto",
  "display": "flex",
  "flexWrap": "wrap",
  "justifyContent": "space-between",
}
`;
